<resources>
    <string name="app_name">Diabhelp</string>
    <string name="project_number">426701180871</string>
    <string name="action_settings">Options</string>
    <string name="title_parametre_activity">Paramètres</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="connexion_login_input">Login</string>
    <string name="connexion_pwd_input">Mot de passe</string>
    <string name="connexion_email_input">Adresse e-mail</string>
    <string name="connexion_button">Se connecter</string>
    <string name="checkbox_autoConnect">Rester connecté</string>
    <string name="register_button">S\'inscrire</string>
    <string name="title_register">S\'enregister</string>
    <string name="ou">ou</string>
    <string name="register">S\'enregistrer sur Diabhelp</string>
    <string name="register_step1">S\'enregistrer sur Diabhelp étape 1/2</string>
    <string name="register_step2">S\'enregistrer sur Diabhelp étape 2/2</string>
    <string name="register_natively_button">S\'inscrire via Diabhelp</string>
    <string name="register_next_step_button">Passer à la prochaine étape</string>
    <string name="register_validate_button">Valider l\'inscription</string>
    <string name="register_login_label">Login (min 6 caractères)</string>
    <string name="register_pwd_label">Mot de passe (min 6 caractères)</string>
    <string name="register_pwdconfirm_input">confirmation de mot de passe</string>
    <string name="register_firstname_label">Prénom</string>
    <string name="register_firstname_input">Prénom</string>
    <string name="register_lastname_label">Nom de famille</string>
    <string name="register_lastname_input">Nom de famille</string>
    <string name="register_role_label">Vous utilisez Diabhelp en tant que :</string>
    <string name="Button_text">En savoir plus..</string>
    <string name="title_diabete_gestationelle">Le diabete gestationel</string>
    <string name="intro_diabete_gestationelle">
        Le diabète gestationnel, appelé aussi \'diabète de grossesse\', survient chez la femme
        enceinte vers la fin du 2e trimestre. Il peut durer le temps de la grossesse ou être
        révélateur d\'un diabète antérieur. Quels sont les symptômes et les causes ?
        Quels risques pour la mère et le fœtus ? Comment se réalisent le dépistage et le
        diagnostic ? Quels sont les traitements ?
    </string>
    <string name="cause_diabete_gestationelle">Les causes</string>
    <string name="content_cause_diabete_gestiationelle">
        Comme pour le diabète, le diabète gestationnel est une intolérance aux glucides, c’est à
        dire un trouble de la régulation du glucose (glycémie) entraînant un excès de sucre dans le
        sang ou hyperglycémie chronique.\n\n
        Sous le terme de diabète gestationnel, on regroupe deux populations différentes :\n
        1. les femmes qui ont un diabète méconnu et que la grossesse va révéler \n
        2. les femmes qui développent un diabète uniquement à l’occasion de la grossesse, trouble
        qui disparaît le plus souvent après la grossesse.\n\n

        S’il y a un risque accru de diabète pendant la grossesse, c’est que la grossesse est par
        nature diabétogène car il existe physiologiquement pendant cette période un état
        d’insulinorésistance qui va s’aggraver progressivement avec le déroulement de la grossesse.\n
        Dans tous les cas, le diabète gestationnel doit être surveillé et traité car il comporte un
        risque pour la mère comme pour l’enfant.\n\n

        Selon la définition de l’OMS* : «le diabète gestationnel  est un trouble de la tolérance
        glucidique conduisant à une hyperglycémie de sévérité variable, débutant ou diagnostiqué
        pour la première fois pendant la grossesse.»
    </string>
    <string name="title_risk_gestationelle">Risques et complications</string>
    <string name="risk_diabete_gestationelle">
        Les risques pour la mère et l’enfant se situent essentiellement dans la période périnatale.\n
        Risques pour l’enfant :\n\n
        Le glucose en excès chez la mère est transmis au fœtus en surplus. Cette réserve calorique
        excédentaire est stockée dans les organes de l’enfant, résultat : poids et croissance sont
        excessifs. C’est pourquoi la complication la plus fréquente est la macrosomie : un poids à
        la naissance trop important (supérieur à 4kg) et qui peut entraîner un accouchement
        difficile ou compliqué.\n\n
        D’autres complications pour l’enfant sont possibles comme :\n
        - détresse respiratoire\n
        - hypoglycémie néonatale\n
        - risque de développer un diabète de type 2\n\n
        Risques pour la mère : \n\n
        Pour les mères, la complication la plus grave est la survenue d’une prééclampsie pouvant
        associer :\n\n
        - prise de poids\n
        - œdèmes\n
        - hypertension artérielle\n
        - accouchement par césarienne\n
        - risque de développer un diabète de type 2 après la grossesse\n
        - accouchement prématuré\n
        - toxémie gravidique (complications rénales)
    </string>
    <string name="title_diabete_type2">Le diabete de type 2</string>
    <string name="intro_diabete_type2">
        Le diabète de type 2 et l\'insulinorésistance\n
        Il apparaît généralement chez le sujet de plus de 40 ans. Cependant les premiers cas
        d’adolescents et d’adultes jeunes touchés apparaissent en France.\n
        Le surpoids, l’obésité et le manque d’activité physique sont la cause révélatrice du diabète
        de type 2 chez des sujets génétiquement prédisposés. Sournois et indolore, le développement
        du diabète de type 2 peut passer longtemps inaperçu : on estime qu’il s’écoule en moyenne 5 à
        10 ans entre l’apparition des premières hyperglycémies et le diagnostic.\n
        Dans le diabète de type 2, autrefois appelé non insulino dépendant (DNID), le processus est
        différent que dans le diabète de type 1. Deux anomalies sont responsables de l’hyperglycémie :\n
        - Soit le pancréas fabrique toujours de l’insuline mais pas assez, par rapport à la glycémie
        : c’est l’insulinopénie.\n
        - Soit cette insuline agit mal, on parle alors d’insulinorésistance.
    </string>
    <string name="content_diabete_type2">
        L\'insuline ne peut plus réguler la glycémie et cette résistance épuise progressivement le
        pancréas qui finit par ne plus assurer une production suffisante d\'insuline. Ces deux
        mécanismes font que le glucose ne pénètre pas dans les cellules du corps et reste dans la
        circulation sanguine. Le taux de glucose dans le sang n’est pas régulé par l’insuline.
    </string>
    <string name="title_cause_diabete_type2">Les causes</string>
    <string name="content_cause_diabete_type2">
        Il n\'existe pas une cause précise mais un ensemble de facteurs favorisants :\n
        - une origine génétique : le facteur familial est tout à fait prépondérant. Des antécédents
        de diabète du même type sont souvent présents dans la famille.\n
        - des facteurs environnementaux : alimentation déséquilibrée, un manque d’activité physique
        responsables du surpoids."
    </string>
    <string name="traitements_diabete_type2">Traitement du diabète de type 2</string>
    <string name="content_traitements_diabete_type2">
        Il est traité dans un premier temps par des mesures hygiéno-dététiques puis on a rapidement
        recours à des traitements anti diabétiques oraux ou injectables (injection d\'insuline avec
        une seringue ou un stylo) dont l’efficacité n’est optimale que s’ils sont associés à une
        alimentation équilibrée et une activité physique régulière.\n
        Le diabète de type 2 étant une maladie évolutive, après l’augmentation progressive des anti
        diabétiques (escalade thérapeutique), des injections d’insuline seront proposées au patient
        lorsque la carence en insuline sera trop importante.
    </string>
    <string name="title_react">Savoir réagir face à un malaise</string>
    <string name="title_hyper_react">Hyperglycémie</string>
    <string name="recognize_hyper_react">
        Comment la reconnaître ?\n\t   - Nausées\n\t   - Teint pâle\n\t   - Mauvaise humeur\n\n
        Que faire ? :\n Effectuer une glycémie et ajuster son insuline rapide
    </string>
    <string name="title_hypo_react">Hypoglycémie</string>
    <string name="content_hypo_react">
        Comment la reconnaître ?\n\t   - Tremblements\n\t   - Palpitations\n\t   - Transpiration\n\t
        - Faim\n\t   - Fatigue\n\t   - Confusion..\n\nQue faire ? :\n\t
        Effectuer une glycémie et consommer une collation
    </string>
    <string name="title_glucagon_react">Injection de glucagon</string>
    <string name="content_glucagon_react">
        Le glucagon est une hormone qui a des effets opposés à ceux de l\'insuline : il élève la
        quantité de glucose (sucre) dans le sang.\n\n
        Au moment d’une hypoglycémie grave (glycémie inférieure à 2,8 mmol par litre et risque
        d’inconscience), on doit injecter du glucagon à la personne diabétique. Il est donc
        important que ses proches sachent comment faire une injection de glucagon.
    </string>
    <string name="title_regime_diabetique">Régime du diabétique</string>
    <string name="intro_regime_diabetique">
        Le contrôle et la surveillance de l\'alimentation sont fondamentaux pour un diabétique.
        L\'alimentation représente un véritable traitement, au même titre que l\'activité physique
        et les médicaments. La surveillance de l\'alimentation permet d\'éviter des modifications
        importantes de la glycémie et de prévenir l\'apparition des complications du diabète
        (cardio-vasculaires, rénales, ophtalmiques…). L\'alimentation conseillée aux diabétiques
        est identique à celle recommandée à la majorité des personnes.
    </string>
    <string name="subtitle_regime_diabetique">Alimentation du diabétique</string>
    <string name="conseil_regime_diabetique">
        Conseils pour adopter une bonne alimentation lorsqu\'on présente un diabète : \n
        ne pas faire de régime sévère, pouvoir manger de tout, avoir une alimentation variée et
        équilibrée, manger en quantité raisonnable, ne pas comptabiliser obsessionnellement les calories
        consommées, prendre l\'avis d\'un nutritionniste ou d\'un diététicien avec l\'accord de son
        diabétologue. Éviter la consommation isolée d\'aliments riches en sucre et respecter à
        chaque repas la proportion des différentes catégories d\'aliments indispensables avec 40 à
        50%% de glucides, 15%% de protéines et 30 à 45%% de lipides.\n
        D\'autre part, ne jamais consommer de morceaux de sucre sauf lorsqu\'une situation
        exceptionnelle le nécessite (hypoglycémie par exemple).
        Respecter les quantités totales de glucides autorisés et contrôler son poids. Chez les
        patients diabétiques de type II, une perte de poids améliore la glycémie.\n
        Le fractionnement des repas est indispensable pour maintenir un bon équilibre de la
        glycémie : effectuer 3 repas principaux ainsi qu\'une ou deux collations, prendre ses repas
        régulièrement, ne pas sauter de repas, manger des légumes et fruits à tous les repas,
        consommer des féculents à chaque repas, celui du midi et du soir, associer légumes et
        féculents, éviter les produits riches en sucre, préférer les viandes maigres, manger du
        poisson au moins 2 ou 3 fois par semaine, consommer des féculents en les répartissant sur la
        journée pour que l\'apport en glucides corresponde aux besoins de l\'organisme et à votre
        activité physique, varier les aliments et faire un vrai petit déjeuner.\n
        Boire de l\'eau en quantité suffisante, éviter les boissons sucrées.
    </string>
</resources>