<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".Connexion_inscription.RegisterConnexionInfosFragment"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="#00ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_step1"
        android:id="@+id/title_register"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion_email_input"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="20dp"
        android:id="@+id/email_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/connexion_email_input"
        android:id="@+id/email_input"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_login_label"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="10dp"
        android:id="@+id/login_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/connexion_login_input"
        android:maxLength="42"
        android:id="@+id/login_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_pwd_label"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="10dp"
        android:id="@+id/pwd_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/connexion_pwd_input"
        android:maxLength="42"
        android:inputType="textPassword"
        android:id="@+id/pwd_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_pwdconfirm_input"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="10dp"
        android:id="@+id/pwdconfirm_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/connexion_pwd_input"
        android:maxLength="42"
        android:inputType="textPassword"
        android:id="@+id/pwdconfirm_input" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="15dp"
        android:text="@string/register_next_step_button"
        android:textAllCaps="true"
        android:id="@+id/next_step_button"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:background="#308c37" />

</LinearLayout>