<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".Connexion_inscription.RegisterPersonalInfosFragment"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="#00ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_step2"
        android:id="@+id/title_register"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_firstname_label"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="20dp"
        android:id="@+id/firstname_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/register_firstname_input"
        android:inputType="textEmailAddress"
        android:id="@+id/firstname_input"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_lastname_label"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="10dp"
        android:id="@+id/lastname_label"/>

    <EditText
        style="@style/editText_connexion"
        android:hint="@string/register_lastname_input"
        android:maxLength="42"
        android:id="@+id/lastname_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_role_label"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_marginTop="10dp"
        android:id="@+id/role_label"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/role_spinner"
        android:background="@color/primary_text_default_material_dark"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="15dp"
        android:text="@string/register_validate_button"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:background="#308c37"
        android:id="@+id/validate_button"/>

</LinearLayout>