<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_info"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_diabete_gestationelle"
                android:id="@+id/title"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/intro_diabete_gestationelle"
                android:id="@+id/introtype1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:gravity="center"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cause_diabete_gestationelle"
                android:id="@+id/title3"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_cause_diabete_gestiationelle"
                android:id="@+id/intro"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_risk_gestationelle"
                android:id="@+id/title4"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/risk_diabete_gestationelle"
                android:id="@+id/content5"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_info_height"
                android:textColor="@color/white"
                android:text="@string/Button_text"
                android:background="@color/buttoncolor"
                android:id="@+id/button"
                android:onClick="launch_more"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
