<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Connexion_inscription.RegisterActivity"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:id="@+id/title_register"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="15dp"
        android:text="@string/register_natively_button"
        android:textAllCaps="true"
        android:id="@+id/signup_button"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:background="#308c37" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textAllCaps="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="15dp"
        android:text="S'inscrire via Facebook"
        android:textAllCaps="true"
        android:id="@+id/signup_facebook_button"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:background="#306c8c" />
</LinearLayout>